Prevent logo from jumping on responsive layouts

--- a/resources/assets/scss/public/all.scss
+++ b/resources/assets/scss/public/all.scss
@@ -189,10 +189,6 @@ body {
     width: 100%;
 }
 .logo-wrapper {
-    @include from($mobile) {
-        width: 150px;
-        padding-top: 2px;
-    }
     .no-svg & {
         background: url('/images/logos/mobile-logo.png') no-repeat center center;
         @include from($mobile) {
